name:                main
version:             1.0.0
author:              Joshua Crotts
cabal-version:       >=1.20
build-type:          Simple

executable main
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       base
                     , sdl2
                     , text
                     , random
                     , linear
                     , sdl2-image
                     , sdl2-mixer
                     , sdl2-ttf
  default-language:    Haskell2010
  default-extensions: OverloadedStrings
